--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         />
         <link rel="stylesheet" href="./styles/styles.css" />
     </head>
-    <body class=" ">
+    <body class="bg-gray-50">
         <div id="container" class="mx-auto w-4/5">
             <nav
                 id="navbar"
-                class="flex place-items-start p-4 text-black sticky top-0 z-50 text-lg"
+                class="flex place-items-start p-4 text-black top-0 z-50 text-lg"
             >
                 <img
                     src="./images/logo.svg"
@@ -35,7 +35,7 @@
                         <div>
                             <button
                                 type="button"
-                                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-md font-semibold text-gray-600 hover:text-black"
+                                class="inline-flex w-full justify-center gap-x-1.5 rounded-md px-3 py-2 text-md font-semibold text-gray-600 hover:text-black"
                                 id="menu-button"
                                 aria-expanded="trye"
                                 aria-haspopup="true"
@@ -57,7 +57,7 @@
                         </div>
 
                         <div
-                            class="absolute right-4 z-10 mt-2 w-36 py-2 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+                            class="hidden absolute right-4 z-10 mt-2 w-36 py-2 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
                             role="menu"
                             aria-orientation="vertical"
                             aria-labelledby="menu-button"
@@ -119,7 +119,7 @@
                         <div>
                             <button
                                 type="button"
-                                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-md font-semibold text-gray-600 hover:text-black"
+                                class="inline-flex w-full justify-center gap-x-1.5 rounded-md px-3 py-2 text-md font-semibold text-gray-600 hover:text-black"
                                 id="menu-button"
                                 aria-expanded="true"
                                 aria-haspopup="true"
@@ -141,7 +141,7 @@
                         </div>
 
                         <div
-                            class="absolute right-4 z-10 mt-2 w-28 py-2 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+                            class="hidden absolute right-4 z-10 mt-2 w-28 py-2 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
                             role="menu"
                             aria-orientation="vertical"
                             aria-labelledby="menu-button"
@@ -205,41 +205,43 @@
                 id="content"
                 class="grid grid-cols-2 grid-rows-1 max-content mx-auto"
             >
-                <div class="block w-4/5 relative left-28 top-36">
-                    <div class="block my-8">
+                <div class="block w-4/5 relative left-28 pt-36 h-5/6">
+                    <div class="block mt-6 mb-2">
                         <h1 class="text-8xl font-bold">Make</h1>
                         <h1 class="text-8xl font-bold">remote work</h1>
                     </div>
 
-                    <p class="block font-medium text-xl w-4/5 my-16">
+                    <p
+                        class="block font-medium text-xl w-3/4 my-16 tracking-wide"
+                    >
                         Get your team in sync, no matter your location.
                         Streamline processes, create team rituals, and watch
                         productivity soar.
                     </p>
                     <button
-                        class="h-16 w-48 text-lg font-bold border-solid border-black border-2 rounded-2xl px-6 py-2 cursor-pointer"
+                        class="h-16 w-48 text-xl font-bold text-white border-solid border-black bg-black border-2 rounded-2xl px-6 py-2 cursor-pointer hover:text-black hover:bg-white text-black"
                     >
-                        <span class="">Learn more</span>
+                        <span class=" ">Learn more</span>
                     </button>
                     <div id="sponsors" class="block py-28">
                         <img
                             src="./images/client-databiz.svg"
                             alt=""
-                            class="inline-block"
+                            class="inline-block pr-7"
                         /><img
                             src="./images/client-audiophile.svg"
                             alt=""
-                            class="inline-block"
+                            class="inline-block px-7"
                         />
 
                         <img
                             src="./images/client-meet.svg"
                             alt=""
-                            class="inline-block"
+                            class="inline-block px-7"
                         /><img
                             src="./images/client-maker.svg"
                             alt=""
-                            class="inline-block"
+                            class="inline-block pl-7"
                         />
                     </div>
                 </div>
@@ -260,15 +262,22 @@
                     />
                 </picture>
             </div>
+            <div
+                class="relative attribution text-center bottom-64 text-gray-400 text-sm pt-4"
+            >
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank"
+                    class="text-gray-600 font-bolder underline"
+                    >Frontend Mentor</a
+                >. Coded by
+                <a href="#" class="text-gray-600 font-bolder underline"
+                    >Anna Rurak</a
+                >.
+            </div>
         </div>
-        <div class="attribution text-center top-12">
-            Challenge by
-            <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank"
-                >Frontend Mentor</a
-            >. Coded by <a href="#">Anna Rurak</a>.
-        </div>
+
         <script src="./index.js"></script>
     </body>
 </html>
